# ProjectMCHS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  mchs_db_dolzhnost.sql  mchs_db_exercisesreport.sql  mchs_db_exercisetype.sql  pyproject.toml  requirements.txt  мчс_бд.sql
api/: Dockerfile  database.py  db_credentials.py  entrypoint.sh  local.env  main.py  models.py  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 01c3a4b86943_remove_log_stuff_for_now.py  024cdaa1f9f4_added_logs_table_and_related_entities_.py  0352cf6ef74c_more_of_small_improvements.py  161b13f2e8e5_12.py  24c99df29c25_ondelete_onupdate_for_exercise_exercise_.py  2e7ea553e82f_added_primary_key_true_to_some_.py  30de914bcc07_fixed_employee_priv_to_user_priv.py  351ee1f15db9_changed_employee_privilege_to_user_.py  3687e2483334_removed_all_mentions_of_token_and_other_.py  3e08bd2fcc80_clean_revision.py  40be825ba2b4_ondelete_onupdate_for_excercise_.py  4cb3aec1afcd_updated_log_table.py  53b7d0740405_removed_prepatory_period_from_rang.py  55b34af52a94_user_contact_info_column.py  65b7b1d7b541_ondelete_onupdate_for_excercise_.py  (+18 more)
api/src/: main.py
docs/: uml_diag.uml
mysql/: Dockerfile  local.env
mysql/db/: 00_test_table.sql  mchs_db_attestationtype.sql  mchs_db_authenticationtokens.sql  mchs_db_userauthentication.sql
mysql/db.backup/: mchs_db_attestation.sql  mchs_db_employee.sql  mchs_db_employeeprivileges.sql  mchs_db_exercise.sql  mchs_db_rang.sql
src/: main.py
src/backend/: backend_main.py
src/frontend/: frontend_main.py
(+52 files in other folders)
