[project]
name = "projectmchs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)"
]

[tool.poetry]
packages = [{include = "projectmchs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
